# playfield

./: .gitignore  Dockerfile  Makefile  README.md  setup.cfg  setup.py  tox.ini
playfield/src/: utils.py
playfield/src/images/: transform.py
playfield/src/utils/: helpers.py  logger.py
settings/: video_urls.txt
