[metadata]
name = "playfield"
version = "0.1.0"
author = "Jack Kersey"
author-email = "jack.kersey@gmail.com"
home-page = "https://github.com/jrkerse/playfield"
description = "Like hawkeye, without the overhead"
long_description = file: README.md
license_files = license.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
